# maudio-editor-qt

./: .gitignore  CMakeLists.txt  README.txt  maudio-editor-qt.pro
include/: mainwindow.h  mainwindow.hpp  maudiomainwidget.h  maudiosceneview.h
src/: main.cpp  mainwindow.cpp  maudiomainwidget.cpp  maudiosceneview.cpp
ui/: mainwindow.ui
